--- a/select_from_diario.ipynb
+++ b/select_from_diario.ipynb
@@ -66,404 +66,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort_values(by= ['FECHA', 'GRUPO', 'HORA'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop('index', axis=1 , inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FECHA</th>\n",
-       "      <th>GRUPO</th>\n",
-       "      <th>HORA</th>\n",
-       "      <th>ARL</th>\n",
-       "      <th>ESTADO_OPE</th>\n",
-       "      <th>PI_SOTR</th>\n",
-       "      <th>ARL_ECON</th>\n",
-       "      <th>EST_REMUN</th>\n",
-       "      <th>ENERGIA</th>\n",
-       "      <th>PRECIO_NODO</th>\n",
-       "      <th>...</th>\n",
-       "      <th>POT_DISP_R19</th>\n",
-       "      <th>FACTOR_KM</th>\n",
-       "      <th>HORA_REPRESENTATIVA</th>\n",
-       "      <th>ENERG_GEN_TRANSAC</th>\n",
-       "      <th>ENERG_OPE_TRANSAC</th>\n",
-       "      <th>SOBREC_FORZ_PROPIO</th>\n",
-       "      <th>PGENE_RES354</th>\n",
-       "      <th>CGU_PROPIO</th>\n",
-       "      <th>CGU_MEM</th>\n",
-       "      <th>CGU_GAS_CEDIDO</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>451167</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>ADTOHI</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1682</td>\n",
-       "      <td>...</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>451168</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>ADTOHI</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1682</td>\n",
-       "      <td>...</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>451169</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>ADTOHI</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1682</td>\n",
-       "      <td>...</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>451170</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>ADTOHI</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1682</td>\n",
-       "      <td>...</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>451171</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>ADTOHI</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lib</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1682</td>\n",
-       "      <td>...</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393619</th>\n",
-       "      <td>2024-02-29</td>\n",
-       "      <td>PPLEHI</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>256.899994</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>251.167999</td>\n",
-       "      <td>7534</td>\n",
-       "      <td>...</td>\n",
-       "      <td>285.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393620</th>\n",
-       "      <td>2024-02-29</td>\n",
-       "      <td>PPLEHI</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>256.600006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>251.238998</td>\n",
-       "      <td>7534</td>\n",
-       "      <td>...</td>\n",
-       "      <td>285.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393621</th>\n",
-       "      <td>2024-02-29</td>\n",
-       "      <td>PPLEHI</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>225.199997</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>224.636993</td>\n",
-       "      <td>7534</td>\n",
-       "      <td>...</td>\n",
-       "      <td>285.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393622</th>\n",
-       "      <td>2024-02-29</td>\n",
-       "      <td>PPLEHI</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>194.100006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>195.337006</td>\n",
-       "      <td>7534</td>\n",
-       "      <td>...</td>\n",
-       "      <td>285.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393623</th>\n",
-       "      <td>2024-02-29</td>\n",
-       "      <td>PPLEHI</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>167.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>===</td>\n",
-       "      <td>167.647003</td>\n",
-       "      <td>7534</td>\n",
-       "      <td>...</td>\n",
-       "      <td>285.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>488184 rows × 40 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            FECHA   GRUPO  HORA  ARL ESTADO_OPE     PI_SOTR  ARL_ECON  \\\n",
-       "451167 2023-01-01  ADTOHI     1    1        lib    0.000000         1   \n",
-       "451168 2023-01-01  ADTOHI     2    1        lib    0.000000         1   \n",
-       "451169 2023-01-01  ADTOHI     3    1        lib    0.000000         1   \n",
-       "451170 2023-01-01  ADTOHI     4    1        lib    0.000000         1   \n",
-       "451171 2023-01-01  ADTOHI     5    1        lib    0.000000         1   \n",
-       "...           ...     ...   ...  ...        ...         ...       ...   \n",
-       "393619 2024-02-29  PPLEHI    20    1        ===  256.899994         1   \n",
-       "393620 2024-02-29  PPLEHI    21    1        ===  256.600006         1   \n",
-       "393621 2024-02-29  PPLEHI    22    1        ===  225.199997         1   \n",
-       "393622 2024-02-29  PPLEHI    23    1        ===  194.100006         1   \n",
-       "393623 2024-02-29  PPLEHI    24    1        ===  167.000000         1   \n",
-       "\n",
-       "       EST_REMUN     ENERGIA  PRECIO_NODO  ...  POT_DISP_R19 FACTOR_KM  \\\n",
-       "451167       lib    0.000000         1682  ...         150.0       1.0   \n",
-       "451168       lib    0.000000         1682  ...         150.0       1.0   \n",
-       "451169       lib    0.000000         1682  ...         150.0       1.0   \n",
-       "451170       lib    0.000000         1682  ...         150.0       1.0   \n",
-       "451171       lib    0.000000         1682  ...         150.0       1.0   \n",
-       "...          ...         ...          ...  ...           ...       ...   \n",
-       "393619       ===  251.167999         7534  ...         285.0       1.0   \n",
-       "393620       ===  251.238998         7534  ...         285.0       1.0   \n",
-       "393621       ===  224.636993         7534  ...         285.0       1.0   \n",
-       "393622       ===  195.337006         7534  ...         285.0       1.0   \n",
-       "393623       ===  167.647003         7534  ...         285.0       1.0   \n",
-       "\n",
-       "        HORA_REPRESENTATIVA  ENERG_GEN_TRANSAC  ENERG_OPE_TRANSAC  \\\n",
-       "451167                 None                NaN                NaN   \n",
-       "451168                 None                NaN                NaN   \n",
-       "451169                 None                NaN                NaN   \n",
-       "451170                 None                NaN                NaN   \n",
-       "451171                 None                NaN                NaN   \n",
-       "...                     ...                ...                ...   \n",
-       "393619                    S                NaN                NaN   \n",
-       "393620                    S                NaN                NaN   \n",
-       "393621                    S                NaN                NaN   \n",
-       "393622                    S                NaN                NaN   \n",
-       "393623                    S                NaN                NaN   \n",
-       "\n",
-       "        SOBREC_FORZ_PROPIO  PGENE_RES354  CGU_PROPIO  CGU_MEM  CGU_GAS_CEDIDO  \n",
-       "451167                None           NaN         NaN      NaN             NaN  \n",
-       "451168                None           NaN         NaN      NaN             NaN  \n",
-       "451169                None           NaN         NaN      NaN             NaN  \n",
-       "451170                None           NaN         NaN      NaN             NaN  \n",
-       "451171                None           NaN         NaN      NaN             NaN  \n",
-       "...                    ...           ...         ...      ...             ...  \n",
-       "393619                None           NaN         NaN      NaN             NaN  \n",
-       "393620                None           NaN         NaN      NaN             NaN  \n",
-       "393621                None           NaN         NaN      NaN             NaN  \n",
-       "393622                None           NaN         NaN      NaN             NaN  \n",
-       "393623                None           NaN         NaN      NaN             NaN  \n",
-       "\n",
-       "[488184 rows x 40 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_24188\\3350006401.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, connection)\n"
+     ]
     }
    ],
    "source": [
-    "df"
+    "#SELEC * FROM Diario;\n",
+    "\n",
+    "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'\n",
+    "\n",
+    "# Conectar a la base de datos\n",
+    "connection = pyodbc.connect(connection_string)\n",
+    "\n",
+    "# Crear un cursor para ejecutar consultas\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "# TODO: Crear acá la tabla en la BBDD\n",
+    "#  Consulta SQL\n",
+    "query = \"SELECT * FROM DiarioTest\"\n",
+    "\n",
+    "# Ejecutar la consulta\n",
+    "df = pd.read_sql(query, connection)\n",
+    "\n",
+    "# Cerrar el cursor\n",
+    "cursor.close()"
    ]
   }
  ],
