Cargando fecha diaria

--- a/carga_diaria_zip-sql.ipynb
+++ b/carga_diaria_zip-sql.ipynb
@@ -16,7 +16,7 @@
     "import sqlalchemy\n",
     "import urllib\n",
     "\n",
-    "from TAPI import capturar_fecha, ultimo_dia_sql\n",
+    "import TAPI\n",
     "\n",
     "def iterar_entre_fechas(fecha_desde, fecha_hasta):\n",
     "    fecha_actual = datetime.strptime(fecha_desde, \"%Y-%m-%dT%H:%M:%S.%f%z\")\n",
@@ -30,6 +30,88 @@
     "        yield fecha_actual, fecha_siguiente\n",
     "        # Añadir un día para la próxima iteración\n",
     "        fecha_actual += timedelta(days=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from TAPI.ultimodocumento import ultimo_dia_CAMM\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def  ultimo_dia_CAMM():\n",
+    "\n",
+    "    ultimafecha = requests.get(\"https://api.cammesa.com/pub-svc/public/obtieneFechaUltimoDocumento?nemo=PARTE_POST_OPERATIVO\")\n",
+    "\n",
+    "    #fecha = str(ultimafecha.text[10:-2])\n",
+    "    fecha = ultimafecha.text[10:-2]\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    return fecha\n",
+    "\n",
+    "a = ultimo_dia_CAMM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024-03-24'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ultimafecha = requests.get(\"https://api.cammesa.com/pub-svc/public/obtieneFechaUltimoDocumento?nemo=PARTE_POST_OPERATIVO\")\n",
+    "\n",
+    "#fecha = str(ultimafecha.text[10:-2])\n",
+    "fecha = ultimafecha.text[10:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024-03-24'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fecha"
    ]
   }
  ],
