Cargando ultimo dia sql

--- a/carga_diaria_zip-sql.ipynb
+++ b/carga_diaria_zip-sql.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jadurian\\Documents\\Tapi\\TAPI\\ultimo_dia_sql.py:35: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, connection)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -16,7 +25,7 @@
     "import sqlalchemy\n",
     "import urllib\n",
     "\n",
-    "import TAPI\n",
+    "from TAPI import ultimodocumento, ultimo_dia_sql\n",
     "\n",
     "def iterar_entre_fechas(fecha_desde, fecha_hasta):\n",
     "    fecha_actual = datetime.strptime(fecha_desde, \"%Y-%m-%dT%H:%M:%S.%f%z\")\n",
@@ -34,84 +43,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from TAPI.ultimodocumento import ultimo_dia_CAMM\n",
+    "fecha_hasta = ultimodocumento.ultimo_dia_CAMM()\n",
+    "fecha_hasta_obj = datetime.strptime(fecha_hasta, \"%Y-%m-%d\")\n",
+    "fecha_hasta_iso = fecha_hasta_obj.isoformat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024-03-24T00:00:00'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fecha_hasta_iso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fecha desde\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def  ultimo_dia_CAMM():\n",
-    "\n",
-    "    ultimafecha = requests.get(\"https://api.cammesa.com/pub-svc/public/obtieneFechaUltimoDocumento?nemo=PARTE_POST_OPERATIVO\")\n",
-    "\n",
-    "    #fecha = str(ultimafecha.text[10:-2])\n",
-    "    fecha = ultimafecha.text[10:-2]\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    return fecha\n",
-    "\n",
-    "a = ultimo_dia_CAMM()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2024-03-24'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ultimafecha = requests.get(\"https://api.cammesa.com/pub-svc/public/obtieneFechaUltimoDocumento?nemo=PARTE_POST_OPERATIVO\")\n",
-    "\n",
-    "#fecha = str(ultimafecha.text[10:-2])\n",
-    "fecha = ultimafecha.text[10:-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2024-03-24'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fecha"
    ]
   }
  ],
