--- a/select_from_diario.ipynb
+++ b/select_from_diario.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_24188\\1236665344.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12508\\1236665344.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
      ]
     }
@@ -66,38 +66,312 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 551544 entries, 0 to 551543\n",
+      "Data columns (total 41 columns):\n",
+      " #   Column               Non-Null Count   Dtype         \n",
+      "---  ------               --------------   -----         \n",
+      " 0   index                551544 non-null  int64         \n",
+      " 1   FECHA                551544 non-null  datetime64[ns]\n",
+      " 2   GRUPO                551544 non-null  object        \n",
+      " 3   HORA                 551544 non-null  int64         \n",
+      " 4   ARL                  551544 non-null  int64         \n",
+      " 5   ESTADO_OPE           551544 non-null  object        \n",
+      " 6   PI_SOTR              551544 non-null  float64       \n",
+      " 7   ARL_ECON             551544 non-null  int64         \n",
+      " 8   EST_REMUN            551544 non-null  object        \n",
+      " 9   ENERGIA              551544 non-null  float64       \n",
+      " 10  PRECIO_NODO          551544 non-null  int64         \n",
+      " 11  PR_REM_ENERGIA       358808 non-null  float64       \n",
+      " 12  SMEC                 551544 non-null  object        \n",
+      " 13  POT_DISP             551544 non-null  float64       \n",
+      " 14  POT_OPE_CPO          495360 non-null  float64       \n",
+      " 15  COMPRA_SPOT          548760 non-null  float64       \n",
+      " 16  SCTD                 324022 non-null  float64       \n",
+      " 17  SCO                  324022 non-null  float64       \n",
+      " 18  PIND                 495360 non-null  float64       \n",
+      " 19  PINDPROG             495360 non-null  float64       \n",
+      " 20  PINDFORZ             495360 non-null  float64       \n",
+      " 21  POT_DISP_GAS         551544 non-null  float64       \n",
+      " 22  POT_DISP_RESERVA     0 non-null       object        \n",
+      " 23  GAS_NOMINADO         0 non-null       object        \n",
+      " 24  COSTO_406            551544 non-null  float64       \n",
+      " 25  REM_ADICIONAL        551544 non-null  int64         \n",
+      " 26  DESP_ECON            551544 non-null  object        \n",
+      " 27  CCM                  0 non-null       object        \n",
+      " 28  CFO                  74886 non-null   float64       \n",
+      " 29  CGN                  322710 non-null  float64       \n",
+      " 30  CGO                  5607 non-null    float64       \n",
+      " 31  POT_DISP_R19         495360 non-null  float64       \n",
+      " 32  FACTOR_KM            495360 non-null  float64       \n",
+      " 33  HORA_REPRESENTATIVA  202270 non-null  object        \n",
+      " 34  ENERG_GEN_TRANSAC    9681 non-null    float64       \n",
+      " 35  ENERG_OPE_TRANSAC    9681 non-null    float64       \n",
+      " 36  SOBREC_FORZ_PROPIO   0 non-null       object        \n",
+      " 37  PGENE_RES354         32832 non-null   float64       \n",
+      " 38  CGU_PROPIO           32832 non-null   float64       \n",
+      " 39  CGU_MEM              32832 non-null   float64       \n",
+      " 40  CGU_GAS_CEDIDO       32832 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(24), int64(6), object(10)\n",
+      "memory usage: 172.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_abril_2024 = df[(df['FECHA'].dt.year == 2024) & (df['FECHA'].dt.month == 4)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_24188\\3350006401.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, connection)\n"
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12508\\2113894948.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  datos_abril_2024.sort_values(by=\"FECHA\", inplace=True)\n"
      ]
     }
    ],
    "source": [
-    "#SELEC * FROM Diario;\n",
-    "\n",
-    "connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'\n",
-    "\n",
-    "# Conectar a la base de datos\n",
-    "connection = pyodbc.connect(connection_string)\n",
-    "\n",
-    "# Crear un cursor para ejecutar consultas\n",
-    "cursor = connection.cursor()\n",
-    "\n",
-    "# TODO: Crear acá la tabla en la BBDD\n",
-    "#  Consulta SQL\n",
-    "query = \"SELECT * FROM DiarioTest\"\n",
-    "\n",
-    "# Ejecutar la consulta\n",
-    "df = pd.read_sql(query, connection)\n",
-    "\n",
-    "# Cerrar el cursor\n",
-    "cursor.close()"
+    "datos_abril_2024.sort_values(by=\"FECHA\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>FECHA</th>\n",
+       "      <th>GRUPO</th>\n",
+       "      <th>HORA</th>\n",
+       "      <th>ARL</th>\n",
+       "      <th>ESTADO_OPE</th>\n",
+       "      <th>PI_SOTR</th>\n",
+       "      <th>ARL_ECON</th>\n",
+       "      <th>EST_REMUN</th>\n",
+       "      <th>ENERGIA</th>\n",
+       "      <th>...</th>\n",
+       "      <th>POT_DISP_R19</th>\n",
+       "      <th>FACTOR_KM</th>\n",
+       "      <th>HORA_REPRESENTATIVA</th>\n",
+       "      <th>ENERG_GEN_TRANSAC</th>\n",
+       "      <th>ENERG_OPE_TRANSAC</th>\n",
+       "      <th>SOBREC_FORZ_PROPIO</th>\n",
+       "      <th>PGENE_RES354</th>\n",
+       "      <th>CGU_PROPIO</th>\n",
+       "      <th>CGU_MEM</th>\n",
+       "      <th>CGU_GAS_CEDIDO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>421385</th>\n",
+       "      <td>5745</td>\n",
+       "      <td>2024-04-24</td>\n",
+       "      <td>GEBATV02</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CMI</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>===</td>\n",
+       "      <td>83.611000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>181.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421384</th>\n",
+       "      <td>5744</td>\n",
+       "      <td>2024-04-24</td>\n",
+       "      <td>GEBATV02</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CMI</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>===</td>\n",
+       "      <td>74.285004</td>\n",
+       "      <td>...</td>\n",
+       "      <td>181.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421383</th>\n",
+       "      <td>5743</td>\n",
+       "      <td>2024-04-24</td>\n",
+       "      <td>GEBATV02</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CMI</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>===</td>\n",
+       "      <td>83.219002</td>\n",
+       "      <td>...</td>\n",
+       "      <td>181.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421393</th>\n",
+       "      <td>5753</td>\n",
+       "      <td>2024-04-24</td>\n",
+       "      <td>GEBATV02</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>COP</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>COP</td>\n",
+       "      <td>75.292000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>181.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>420720</th>\n",
+       "      <td>1480</td>\n",
+       "      <td>2024-04-24</td>\n",
+       "      <td>BAHIEO</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>lib</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>lib</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        index      FECHA     GRUPO  HORA  ARL ESTADO_OPE  PI_SOTR  ARL_ECON  \\\n",
+       "421385   5745 2024-04-24  GEBATV02    10    1        CMI     89.0         1   \n",
+       "421384   5744 2024-04-24  GEBATV02     9    1        CMI     75.0         1   \n",
+       "421383   5743 2024-04-24  GEBATV02     8    1        CMI     74.0         1   \n",
+       "421393   5753 2024-04-24  GEBATV02    18    1        COP     75.0         1   \n",
+       "420720   1480 2024-04-24    BAHIEO    13    1        lib      0.0         1   \n",
+       "\n",
+       "       EST_REMUN    ENERGIA  ...  POT_DISP_R19  FACTOR_KM HORA_REPRESENTATIVA  \\\n",
+       "421385       ===  83.611000  ...         181.4        1.0                None   \n",
+       "421384       ===  74.285004  ...         181.4        1.0                None   \n",
+       "421383       ===  83.219002  ...         181.4        1.0                None   \n",
+       "421393       COP  75.292000  ...         181.4        1.0                None   \n",
+       "420720       lib   0.000000  ...           NaN        NaN                None   \n",
+       "\n",
+       "        ENERG_GEN_TRANSAC  ENERG_OPE_TRANSAC  SOBREC_FORZ_PROPIO  \\\n",
+       "421385                NaN                NaN                None   \n",
+       "421384                NaN                NaN                None   \n",
+       "421383                NaN                NaN                None   \n",
+       "421393                NaN                NaN                None   \n",
+       "420720                NaN                NaN                None   \n",
+       "\n",
+       "        PGENE_RES354  CGU_PROPIO  CGU_MEM  CGU_GAS_CEDIDO  \n",
+       "421385           NaN         NaN      NaN             NaN  \n",
+       "421384           NaN         NaN      NaN             NaN  \n",
+       "421383           NaN         NaN      NaN             NaN  \n",
+       "421393           NaN         NaN      NaN             NaN  \n",
+       "420720           NaN         NaN      NaN             NaN  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_abril_2024.tail()"
    ]
   }
  ],
